Update for acceleration and speed of stepper drivers

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -56,11 +56,12 @@ POSTGUI_HALFILE = rpi-gpio-lathe-postui.hal
 #No Content
 
 [TRAJ]
+AXES = 2
 COORDINATES = X Z
 LINEAR_UNITS =  mm
 ANGULAR_UNITS = degree
 # next is LESS THAN MAX_VEL so see following infos
-DEFAULT_LINEAR_VELOCITY = 2.0
+DEFAULT_LINEAR_VELOCITY = 12.0
 # max vel is 1sec/basepd
 # = 1/100000nS = 1/.0001 = 10000
 # i can have 10000 cycles per sec
@@ -70,7 +71,12 @@ DEFAULT_LINEAR_VELOCITY = 2.0
 # at 5000 steps per sec thats 3.75mm per sec MAX_VELOCITY
 # thats 225mm/min 
 # thisparm is for PE$R SEC
-MAX_LINEAR_VELOCITY = 3.75
+# Denford Orac has X axis with 2.5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
+# Gives max velocity on the X axis of 2.5 / (200 * 4)  = 0.003125mm per step x 5000 = 15.625mm per sec MAX_VELOCITY
+# Z Axis has 5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
+# Gives max veloicity on the Z axis of 5 / (200 * 4) = 0.00625mm per step x 5000 = 31.21mm per sex MAX_VELOCITY
+MAX_LINEAR_VELOCITY = 31.00
+DEFAULT_ACCELERATION = 5.0
 
 [EMCIO]
 EMCIO = io
@@ -84,33 +90,30 @@ JOINTS = 2
 [AXIS_X]
 MIN_LIMIT = -94.0
 MAX_LIMIT = 94.0
-MAX_VELOCITY = 3.75
-MAX_ACCELERATION = 2000.0
+MAX_VELOCITY = 10.0
+MAX_ACCELERATION = 7.0
 
 [JOINT_0]
 TYPE = LINEAR
-MAX_VELOCITY = 3.75
-MAX_ACCELERATION = 2000.0
-STEPGEN_MAXACCEL = 2200.0
-# 1mm / stepsize = 1/.00075 = 1333.3333333
-SCALE = 1333.33333333
+MAX_VELOCITY = 12.0
+MAX_ACCELERATION = 7.0
+STEPGEN_MAXACCEL = 20.0
+# 1mm / stepsize = 1/0.003125 = 320
+SCALE = 400
 FERROR = 5.25
 MIN_FERROR = 0.25
 MIN_LIMIT = -94.0
 MAX_LIMIT = 94.0
 
-HOME =					90.0
-HOME_OFFSET =			96.133
+HOME = 0.0
+HOME_OFFSET = 5.0
 
 # temp  no homing for rpi while no real hdwr
-HOME_SEARCH_VEL =		10.00
-HOME_SEARCH_VEL =		0.00
-HOME_LATCH_VEL =			.25
-HOME_LATCH_VEL =			0.00
-HOME_USE_INDEX =			NO
-
-HOME_IGNORE_LIMITS =		YES
-HOME_FINAL_VEL =                  10.0
+HOME_SEARCH_VEL = 10.00
+HOME_LATCH_VEL = 0.25
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = YES
+HOME_FINAL_VEL = 10.0
 
 # temp  no homing for rpi while no real hdwr
 # HOME_SEQUENCE = 1
@@ -118,36 +121,29 @@ HOME_FINAL_VEL =                  10.0
 [AXIS_Z]
 MIN_LIMIT = 0.5
 MAX_LIMIT = 56
-MAX_VELOCITY = 3.75
-#MAX_ACCELERATION = 2.0
-MAX_ACCELERATION = 2000.0
-
+MAX_VELOCITY = 30
+MAX_ACCELERATION = 7.0
 
 [JOINT_1]
 TYPE = LINEAR
-MAX_VELOCITY = 3.75
-MAX_ACCELERATION = 2000.0
-STEPGEN_MAXACCEL = 2200.0
-SCALE = -1333.33333333
+MAX_VELOCITY = 30
+MAX_ACCELERATION = 7.0
+STEPGEN_MAXACCEL = 20.0
+SCALE = 280
 FERROR = 5.25
 MIN_FERROR = 0.25
-MIN_LIMIT = -96.3
-MAX_LIMIT = 96.3
+MIN_LIMIT = -100.0
+MAX_LIMIT = 300.0
 
-HOME =					90.0
-HOME_OFFSET =			98.65
-
+HOME = 0.0
+HOME_OFFSET = 5.0
 
 # temp  no homing for rpi while no real hdwr
-HOME_SEARCH_VEL =		10.00
-HOME_SEARCH_VEL =		0.00
-HOME_LATCH_VEL =			.25
-HOME_LATCH_VEL =			0.00
-HOME_USE_INDEX =			NO
-
-
-HOME_IGNORE_LIMITS =		YES
-HOME_FINAL_VEL =                  10.0
+HOME_SEARCH_VEL = 10.00
+HOME_LATCH_VEL = .25
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = YES
+HOME_FINAL_VEL = 5.0
 
 # temp  no homing for rpi while no real hdwr
 # HOME_SEQUENCE = 1
