--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -57,11 +57,11 @@ POSTGUI_HALFILE = rpi-gpio-lathe-postui.hal
 
 [TRAJ]
 AXES = 2
-COORDINATES = X Z
-LINEAR_UNITS =  mm
 ANGULAR_UNITS = degree
-# next is LESS THAN MAX_VEL so see following infos
-DEFAULT_LINEAR_VELOCITY = 12.0
+COORDINATES = X Z
+# This is used when jogging an axis
+DEFAULT_LINEAR_ACCELERATION = 5.0
+LINEAR_UNITS =  mm
 # max vel is 1sec/basepd
 # = 1/100000nS = 1/.0001 = 10000
 # i can have 10000 cycles per sec
@@ -69,14 +69,15 @@ DEFAULT_LINEAR_VELOCITY = 12.0
 # so 5000 steps per sec
 # at 1.5mm pitch and 200 steps per rev and 10x uStepping GecoG540 thats .00075mm per step
 # at 5000 steps per sec thats 3.75mm per sec MAX_VELOCITY
-# thats 225mm/min 
+# thats 225mm/min
 # thisparm is for PE$R SEC
 # Denford Orac has X axis with 2.5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
 # Gives max velocity on the X axis of 2.5 / (200 * 4)  = 0.003125mm per step x 5000 = 15.625mm per sec MAX_VELOCITY
 # Z Axis has 5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
-# Gives max veloicity on the Z axis of 5 / (200 * 4) = 0.00625mm per step x 5000 = 31.21mm per sex MAX_VELOCITY
+# Gives max veloicity on the Z axis of 5 / (200 * 4) = 0.00625mm per step x 5000 = 31.21mm per sec MAX_VELOCITY
 MAX_LINEAR_VELOCITY = 31.00
-DEFAULT_ACCELERATION = 5.0
+NO_FORCE_HOMING = 1
+SPINDLES = 1
 
 [EMCIO]
 EMCIO = io
@@ -86,7 +87,7 @@ TOOL_TABLE = tool.tbl
 [KINS]
 KINEMATICS = trivkins coordinates=xz
 JOINTS = 2
-    
+
 [AXIS_X]
 MIN_LIMIT = -94.0
 MAX_LIMIT = 94.0
