--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -21,7 +21,7 @@ INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
-INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm 0.00075mm
+INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
 LATHE = 1
 
 [FILTER]
@@ -99,7 +99,6 @@ TYPE = LINEAR
 MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 7.0
 STEPGEN_MAXACCEL = 20.0
-# 1mm / stepsize = 1/0.003125 = 320
 SCALE = 400
 FERROR = 5.25
 MIN_FERROR = 0.25
@@ -130,7 +129,7 @@ TYPE = LINEAR
 MAX_VELOCITY = 30
 MAX_ACCELERATION = 7.0
 STEPGEN_MAXACCEL = 20.0
-SCALE = 280
+SCALE = 400
 FERROR = 5.25
 MIN_FERROR = 0.25
 MIN_LIMIT = -100.0
