--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -11,7 +11,8 @@ MACHINE = Denford Orac
 DEBUG = 0
 
 [DISPLAY]
-DISPLAY = axis
+DISPLAY = gmoccapy
+PREFERENCE_FILE_PATH = gmoccapy_preferences
 EDITOR = scite
 PYVCP = rpi-gpio-lathe.xml
 POSITION_OFFSET = RELATIVE
@@ -23,6 +24,7 @@ PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
 LATHE = 1
+EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
