Add missing HALUI in case that fixes the issue

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
@@ -56,6 +56,7 @@ HALFILE = rpi-gpio-lathe.hal
 # none for rpi tests HALFILE = custom.hal
 # none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
 POSTGUI_HALFILE = rpi-gpio-lathe-postui-gmoccapy.hal
+HALUI = halui
 
 [HALUI]
 #No Content
@@ -153,3 +154,9 @@ HOME_FINAL_VEL = 5.0
 # temp  no homing for rpi while no real hdwr
 # HOME_SEQUENCE = 1
 
+[MACROS]
+MACRO = i_am_lost
+MACRO = halo_world
+MACRO = jog_around
+MACRO = increment xinc yinc
+MACRO = go_to_position X-pos Y-pos Z-pos
