Update to get new subcroutine path in

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
@@ -27,6 +27,7 @@ LATHE = 1
 EMBED_TAB_NAME = Cycles
 EMBED_TAB_LOCATION = ntb_preview
 EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+DEFAULT_SPINDLE_SPEED = 600
 CYCLE_TIME = 100
 
 [FILTER]
@@ -40,6 +41,7 @@ py = python
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G18
+SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./
 
 [EMCMOT]
 EMCMOT = motmod
