--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -11,8 +11,7 @@ MACHINE = Denford Orac
 DEBUG = 0
 
 [DISPLAY]
-DISPLAY = gmoccapy
-PREFERENCE_FILE_PATH = gmoccapy_preferences
+DISPLAY = axis
 EDITOR = scite
 PYVCP = rpi-gpio-lathe.xml
 POSITION_OFFSET = RELATIVE
@@ -24,6 +23,7 @@ PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
 LATHE = 1
+EMBED_TAB_NAME = Cycles
 EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
 
 [FILTER]
@@ -37,6 +37,7 @@ py = python
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G18
+SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./
 
 [EMCMOT]
 EMCMOT = motmod
@@ -53,6 +54,7 @@ HALFILE = rpi-gpio-lathe.hal
 # none for rpi tests HALFILE = custom.hal
 # none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
 POSTGUI_HALFILE = rpi-gpio-lathe-postui.hal
+HALUI=halui
 
 [HALUI]
 #No Content
