--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
@@ -46,7 +46,7 @@ SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/m
 [EMCMOT]
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
-BASE_PERIOD = 100000
+BASE_PERIOD = 50000
 SERVO_PERIOD = 1000000
 
 [TASK]
@@ -68,22 +68,19 @@ AXES = 2
 ANGULAR_UNITS = degree
 COORDINATES = X Z
 # This is used when jogging an axis
-DEFAULT_LINEAR_ACCELERATION = 5.0
+DEFAULT_LINEAR_ACCELERATION = 10.0
 LINEAR_UNITS =  mm
-# max vel is 1sec/basepd
-# = 1/100000nS = 1/.0001 = 10000
-# i can have 10000 cycles per sec
-# it takes 2 cycles for 1 step ( no dbldtep yet )
-# so 5000 steps per sec
-# at 1.5mm pitch and 200 steps per rev and 10x uStepping GecoG540 thats .00075mm per step
-# at 5000 steps per sec thats 3.75mm per sec MAX_VELOCITY
-# thats 225mm/min
-# thisparm is for PE$R SEC
-# Denford Orac has X axis with 2.5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
-# Gives max velocity on the X axis of 2.5 / (200 * 4)  = 0.003125mm per step x 5000 = 15.625mm per sec MAX_VELOCITY
-# Z Axis has 5mm pitch leadscrew, 200 steps/rev stepper motor and 4x microstepping
-# Gives max veloicity on the Z axis of 5 / (200 * 4) = 0.00625mm per step x 5000 = 31.21mm per sec MAX_VELOCITY
-MAX_LINEAR_VELOCITY = 31.00
+
+# In order to determine the maximum velocities we can use the base period
+# of 50000ns and determine that if the RPi needs two periods per step we
+# can end up with the following numbe of steps per second
+#
+#     1 / 50000 x 10^-9 = 20000 / 2 = 10000 steps per second
+#
+# For each axis on the Denford ORAC we have a step distance of 0.0025mm.
+# Therefore max velocity is 10000 * 0.0025 = 25mm which is 1500mm per minute.
+# The Denford ORAC is spec'd at 1200mm/min maximum ()
+MAX_LINEAR_VELOCITY = 20
 NO_FORCE_HOMING = 1
 SPINDLES = 1
 
@@ -97,21 +94,21 @@ KINEMATICS = trivkins coordinates=xz
 JOINTS = 2
 
 [AXIS_X]
-MIN_LIMIT = -94.0
-MAX_LIMIT = 94.0
-MAX_VELOCITY = 10.0
-MAX_ACCELERATION = 7.0
+MIN_LIMIT = -50.0
+MAX_LIMIT = 50.0
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 10.0
 
 [JOINT_0]
 TYPE = LINEAR
-MAX_VELOCITY = 12.0
-MAX_ACCELERATION = 7.0
-STEPGEN_MAXACCEL = 20.0
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 10.0
+STEPGEN_MAXACCEL = 15.0
 SCALE = 400
 FERROR = 5.25
 MIN_FERROR = 0.25
-MIN_LIMIT = -94.0
-MAX_LIMIT = 94.0
+MIN_LIMIT = -50.0
+MAX_LIMIT = 50.0
 
 HOME = 0.0
 HOME_OFFSET = 5.0
@@ -127,21 +124,21 @@ HOME_FINAL_VEL = 10.0
 # HOME_SEQUENCE = 1
 
 [AXIS_Z]
-MIN_LIMIT = 0.5
-MAX_LIMIT = 56
-MAX_VELOCITY = 30
-MAX_ACCELERATION = 7.0
+MIN_LIMIT = -250
+MAX_LIMIT = 250
+MAX_VELOCITY = 20
+MAX_ACCELERATION = 10.0
 
 [JOINT_1]
 TYPE = LINEAR
-MAX_VELOCITY = 30
-MAX_ACCELERATION = 7.0
-STEPGEN_MAXACCEL = 20.0
+MAX_VELOCITY = 20
+MAX_ACCELERATION = 10.0
+STEPGEN_MAXACCEL = 15.0
 SCALE = 400
 FERROR = 5.25
 MIN_FERROR = 0.25
-MIN_LIMIT = -100.0
-MAX_LIMIT = 300.0
+MIN_LIMIT = -250.0
+MAX_LIMIT = 250.0
 
 HOME = 0.0
 HOME_OFFSET = 5.0
