Update some spindle and general lathe settings

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy.ini
@@ -14,7 +14,6 @@ DEBUG = 0
 DISPLAY = gmoccapy
 PREFERENCE_FILE_PATH = gmoccapy_preferences
 EDITOR = scite
-PYVCP = rpi-gpio-lathe.xml
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.2
@@ -23,12 +22,13 @@ INTRO_TIME = 5
 PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
-LATHE = 1
 EMBED_TAB_NAME = Cycles
 EMBED_TAB_LOCATION = ntb_preview
 EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
-DEFAULT_SPINDLE_SPEED = 600
+DEFAULT_SPINDLE_SPEED = 1200
 CYCLE_TIME = 200
+LATHE = 1
+BACK_TOOL_LATHE = 1
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
