--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
@@ -22,9 +22,9 @@ INTRO_TIME = 5
 PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
-EMBED_TAB_NAME = Cycles
-EMBED_TAB_LOCATION = ntb_preview
-EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+# EMBED_TAB_NAME = Cycles
+# EMBED_TAB_LOCATION = ntb_preview
+# EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
 DEFAULT_SPINDLE_SPEED = 1200
 CYCLE_TIME = 200
 LATHE = 1
@@ -54,10 +54,10 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [HAL]
-HALFILE = rpi-gpio-lathe.hal
+HALFILE = rpi-gpio-lathe-openloop.hal
 # none for rpi tests HALFILE = custom.hal
 # none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
-POSTGUI_HALFILE = rpi-gpio-lathe-postui-gmoccapy-openloop.hal
+POSTGUI_HALFILE = rpi-gpio-lathe-postui-gmoccapy.hal
 HALUI = halui
 
 [HALUI]
