Align with previous configuration

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
@@ -22,10 +22,18 @@ INTRO_TIME = 5
 PROGRAM_PREFIX = nc_files/
 #INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
-# EMBED_TAB_NAME = Cycles
-# EMBED_TAB_LOCATION = ntb_preview
-# EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
-DEFAULT_SPINDLE_SPEED = 1200
+EMBED_TAB_NAME = Cycles
+EMBED_TAB_LOCATION = ntb_preview
+EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=0 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+DEFAULT_LINEAR_VELOCITY = 25
+MIN_LINEAR_VELOCITY = 0
+MAX_LINEAR_VELOCITY = 125
+DEFAULT_SPINDLE_0_SPEED = 1000
+MIN_SPINDLE_0_SPEED = 200
+MAX_SPINDLE_0_SPEED = 1800
+MAX_SPINDLE_0_OVERRIDE = 1
+MIN_SPINDLE_0_OVERRIDE = 0.5
+
 CYCLE_TIME = 200
 LATHE = 1
 BACK_TOOL_LATHE = 1
@@ -41,7 +49,7 @@ py = python
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G18
-SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./
+SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./:macros/LatheMacros
 
 [EMCMOT]
 EMCMOT = motmod
@@ -55,8 +63,6 @@ CYCLE_TIME = 0.010
 
 [HAL]
 HALFILE = rpi-gpio-lathe-openloop.hal
-# none for rpi tests HALFILE = custom.hal
-# none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
 POSTGUI_HALFILE = rpi-gpio-lathe-postui-gmoccapy.hal
 HALUI = halui
 
@@ -70,6 +76,7 @@ COORDINATES = X Z
 # This is used when jogging an axis
 DEFAULT_LINEAR_ACCELERATION = 20.0
 LINEAR_UNITS =  mm
+POSITION_FILE=/home/cnc/linuxcnc-position.txt
 
 # In order to determine the maximum velocities we can use the base period
 # of 50000ns and determine that if the RPi needs two periods per step we
