--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -50,7 +50,7 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [HAL]
-HALFILE = rpi-gpio-lathe.hal
+HALFILE = rpi-gpio-lathe-openloop.hal
 # none for rpi tests HALFILE = custom.hal
 # none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
 POSTGUI_HALFILE = rpi-gpio-lathe-postui.hal
