--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe-gmoccapy-openloop.ini
@@ -24,7 +24,7 @@ PROGRAM_PREFIX = nc_files/
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
 EMBED_TAB_NAME = Cycles
 EMBED_TAB_LOCATION = ntb_preview
-EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=0 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=0 -U norun=0 -u macros/LatheMacros/lathehandler.py -x {XID} macros/LatheMacros/lathemacro.ui
 DEFAULT_LINEAR_VELOCITY = 25
 MIN_LINEAR_VELOCITY = 0
 MAX_LINEAR_VELOCITY = 125
@@ -49,7 +49,7 @@ py = python
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G18
-SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./:macros/LatheMacros
+SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:macros/LatheMacros
 
 [EMCMOT]
 EMCMOT = motmod
