Update to linuxcnc 2.9.8 (#1)
* Add new VFD manuals

* Add relay boad datasheet

* Align with previous configuration

* Update to latest LatheMacros

* Update readme and remove old content

* Update general UI preferences

* Add a closed-loop spindle control version HAL

* Correct scaling for new VFD and motor in open loop

--- a/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
+++ b/linuxcnc-configuration/denford-orac-rpi/rpi-gpio-lathe.ini
@@ -24,7 +24,7 @@ PROGRAM_PREFIX = nc_files/
 INCREMENTS = 10mm 5mm 2mm 1mm 0.5mm 0.1mm 0.05mm 0.01mm
 LATHE = 1
 EMBED_TAB_NAME = Cycles
-EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u macros/LatheMacros/lathehandler.py -x {XID} macros/LatheMacros/lathemacro.ui
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -37,7 +37,7 @@ py = python
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 RS274NGC_STARTUP_CODE = G18
-SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:./
+SUBROUTINE_PATH = /usr/share/doc/linuxcnc/examples/sample-configs/sim/gmoccapy/macros:macros:macros/LatheMacros
 
 [EMCMOT]
 EMCMOT = motmod
@@ -50,7 +50,7 @@ TASK = milltask
 CYCLE_TIME = 0.010
 
 [HAL]
-HALFILE = rpi-gpio-lathe.hal
+HALFILE = rpi-gpio-lathe-openloop.hal
 # none for rpi tests HALFILE = custom.hal
 # none for rpi tests POSTGUI_HALFILE = custom_postgui.hal
 POSTGUI_HALFILE = rpi-gpio-lathe-postui.hal
